Увеличил минимальную версию до 9 апи

--- a/Zp/res/values/strings.xml
+++ b/Zp/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="Theory_URL">Более подробно по адресу <a href="http://rpw-mos.ru/theory">http://rpw-mos.ru/theory</a></string>
     <string name="Practice_URL">Более подробно по адресу <a href="http://rpw-mos.ru/practice">http://rpw-mos.ru/practice</a></string>
     <string name="E_mail">E-mail:</string>
-    <string name="E_mail_value">burdic.lite@gmail.com</string>
+    <string name="E_mail_value">rpw.mos@gmail.com</string>
     <string name="AboutYear">2014 г.</string>
     <string name="Share_text">Поделиться \nс друзьями</string>
     <string name="title_activity_about">О программе</string>
